# llms-from-scratch

./: main.py  pyproject.toml
exercises/: pytorch.py
exercises/appendix_a/: a2.ipynb  a2.py  a3.ipynb  a3.py  a4.ipynb  a4.py
